# ikada

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  integration-test.yaml  release.yaml
integ/: README.md  maelstrom.rs  maelstrom_network.rs  maelstrom_raft.rs  main.rs  mod.rs
proto/: raft.proto
script/: benchmark.py  benchmark.sh  profile.sh  start.sh  stop.sh
script/memcached/: benchmark.sh  start.sh  stop.sh
src/: client.rs  client_manager.rs  config.rs  error.rs  events.rs  lib.rs  main.rs  network.rs  raft.rs  request_tracker.rs  rpc.rs  server.rs  snapshot.rs  statemachine.rs  storage.rs  trace.rs  types.rs  watchdog.rs
src/core/: election.rs  log.rs  mod.rs  term.rs
src/memcache/: error.rs  handler.rs  mod.rs  protocol.rs  server.rs
src/node/: election.rs  handlers.rs  lifecycle.rs  mod.rs  replication.rs
src/node/handlers/: append_entries.rs  client_command.rs  install_snapshot.rs  mod.rs  vote.rs
