[package]
name = "ikada"
authors = ["donkomura"]
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22"
bincode = "1.3.3"
bytes = { version = "1.11.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
rustyline = "14.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tarpc = { version = "0.37", features = ["full"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "test-util"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[bin]]
name = "maelstrom-ikada"
path = "integ/main.rs"

[[bin]]
name = "ikada-repl"
path = "src/bin/cli.rs"
